[package]
name = "tree-sitter-strings"
description = "Strings grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = [
    "Ameya Ketkar",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "strings"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ketkarameya/tree-sitter-strings"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
